fix: scrollbar

--- a/src/index.css
+++ b/src/index.css
@@ -23,3 +23,19 @@ span {
   margin: 0;
   font-family: Poppins, sans-serif;
 }
+
+::-webkit-scrollbar {
+  width: 8px;
+  height: 8px;
+}
+
+::-webkit-scrollbar-track {
+  /* box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3); */
+}
+
+::-webkit-scrollbar-thumb {
+  background-color: #1a2a3e;
+  border-radius: 8px;
+
+  /* outline: 1px solid slategrey; */
+}
